20/09/2018
Node version from 6 to 7

25/09/2018
Added mysql client
Formatting dockerfile

25/10/2018
Node version from 7 to 8

08/11/2018
Add python-pip

26/04/2019
Update Java from 8 to 11
Update OS from baseimage to ubuntu 18.04

30/05/2019
Added Apache benchmarking tool