@@ -1,0 +1,15 @@
+NAME   := nordri/nordri-admin-tools
+TAG    := $(shell git log -1 --pretty=%h)
+IMG    := ${NAME}:${TAG}
+LATEST := ${NAME}:latest
+
+build:
+	@docker build -t ${IMG} .
+	@docker tag ${IMG} ${LATEST}
+
+push:
+	@docker push ${NAME}
+
+login:
+	@docker login -u ${DOCKERHUB_USERNAME} -p "${DOCKERHUB_PASS}"
+
